@@ -1,3 +1,8 @@
+2007-10-22  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/method.py (FC3_Method._getParser):  Return the
+	OptionParser instance on cdrom installs.
+
 2007-10-18  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  New version.
